attempt to cleanup